--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ hs_err_pid*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+*.idea
 
 # Generated files
 .idea/**/contentModel.xml
